syntax = "proto3";

option java_package = "com.nobodyhub.payroll.core.service.proto";
option java_outer_classname = "PayrollCoreProtocol";

package payroll.core.service.proto;

/*
 * Values for given item
 */
message ItemValue {
    /*
     * the identifier of the Item
     */
    string itemId = 1;
    /*
     * values for different period, yyyymmdd -> value
     */
    map<string, string> values = 2;
}
/*
 * Values for a given period
 */
message PeriodValue {
    /*
     * start date of period
     */
    string startDate = 1;
    /*
     * end date of period
     */
    string endDate = 2;
    /*
     * base date for HR related info
     */
    string baseDate = 3;
    /*
     * items values
     */
    repeated ItemValue items = 4;
}

/*
 * Request sent for calculation, each per employee
 */
message Request {
    /*
     * the id of task to be triggerred
     */
    string taskId = 1;
    /*
     * the identifier of the <code>values</code>
     */
    string dataId = 2;
    /*
     * values for current period
     */
    PeriodValue currentValue = 3;
    /*
     * values for past period(s)
     */
    repeated PeriodValue pastValues = 4;
}

/*
 * Response results from calculation, each per employee
 */
message Response {
    /*
     * the status code
     */
    string statusCode = 1;
    /*
     * the message, if any, to describe the status code
     */
    string message = 2;
    /*
     * the identifier of the <code>values</code>
     */
    string dataId = 3;
    /*
     * the result values
     */
    map<string, string> values = 4;
}

service PayrollCoreService {
    /*
     * do calculation on requested data
     */
    rpc doCalc (stream Request) returns (stream Response);
}
